--- a/blog-backend/package.json
+++ b/blog-backend/package.json
@@ -4,14 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node src",
-    "dev": "nodemon --watch src/ src/index.js"
+    "start": "node -r esm src",
+    "dev": "nodemon --watch src/ -r esm src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.5.0",
+    "esm": "^3.2.25",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
-    "koa-router": "^12.0.0"
+    "koa-router": "^12.0.0",
+    "mongoose": "^6.7.0"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
