--- a/blog-backend/package.json
+++ b/blog-backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon --watch src/ -r esm src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.5.0",
     "esm": "^3.2.25",
