--- a/blog-backend/package.json
+++ b/blog-backend/package.json
@@ -17,7 +17,8 @@
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
-    "mongoose": "^6.7.0"
+    "mongoose": "^6.7.0",
+    "sanitize-html": "^2.7.3"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
